[gd_scene load_steps=57 format=2]

[ext_resource path="res://Ressources/Sprites/Boss Mage/attack/attack10.png" type="Texture" id=1]
[ext_resource path="res://Ressources/Sprites/Boss Mage/attack/attack1.png" type="Texture" id=2]
[ext_resource path="res://Ressources/Sprites/Boss Mage/attack/attack0.png" type="Texture" id=3]
[ext_resource path="res://Ressources/Sprites/Boss Mage/attack/attack2.png" type="Texture" id=4]
[ext_resource path="res://Ressources/Sprites/Boss Mage/attack/attack3.png" type="Texture" id=5]
[ext_resource path="res://Ressources/Sprites/Boss Mage/attack/attack4.png" type="Texture" id=6]
[ext_resource path="res://Ressources/Sprites/Boss Mage/attack/attack5.png" type="Texture" id=7]
[ext_resource path="res://Ressources/Sprites/Boss Mage/attack/attack6.png" type="Texture" id=8]
[ext_resource path="res://Ressources/Sprites/Boss Mage/attack/attack8.png" type="Texture" id=9]
[ext_resource path="res://Ressources/Sprites/Boss Mage/attack/attack7.png" type="Texture" id=10]
[ext_resource path="res://Ressources/Sprites/Boss Mage/attack/attack9.png" type="Texture" id=11]
[ext_resource path="res://Ressources/Sprites/Boss Mage/attack/attack12.png" type="Texture" id=12]
[ext_resource path="res://Ressources/Sprites/Boss Mage/idle/idle0.png" type="Texture" id=13]
[ext_resource path="res://Ressources/Sprites/Boss Mage/idle/idle6.png" type="Texture" id=14]
[ext_resource path="res://Ressources/Sprites/Boss Mage/idle/idle9.png" type="Texture" id=16]
[ext_resource path="res://Ressources/Sprites/Boss Mage/idle/idle5.png" type="Texture" id=17]
[ext_resource path="res://Ressources/Sprites/Boss Mage/idle/idle2.png" type="Texture" id=18]
[ext_resource path="res://Ressources/Sprites/Boss Mage/idle/idle1.png" type="Texture" id=19]
[ext_resource path="res://Ressources/Sprites/Boss Mage/idle/idle3.png" type="Texture" id=20]
[ext_resource path="res://Ressources/Sprites/Boss Mage/attack/attack13.png" type="Texture" id=21]
[ext_resource path="res://Ressources/Sprites/Boss Mage/idle/idle4.png" type="Texture" id=22]
[ext_resource path="res://Ressources/Sprites/Boss Mage/idle/idle7.png" type="Texture" id=23]
[ext_resource path="res://Ressources/Sprites/Boss Mage/idle/idle8.png" type="Texture" id=24]
[ext_resource path="res://Ressources/Sprites/Boss Mage/idle/idle10.png" type="Texture" id=25]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn00.png" type="Texture" id=26]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn11.png" type="Texture" id=27]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn1.png" type="Texture" id=28]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn2.png" type="Texture" id=29]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn9.png" type="Texture" id=30]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn12.png" type="Texture" id=31]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn13.png" type="Texture" id=32]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn8.png" type="Texture" id=33]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn16.png" type="Texture" id=34]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn0.png" type="Texture" id=35]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn15.png" type="Texture" id=36]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn4.png" type="Texture" id=37]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn6.png" type="Texture" id=38]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn14.png" type="Texture" id=39]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn5.png" type="Texture" id=40]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn10.png" type="Texture" id=41]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn3.png" type="Texture" id=42]
[ext_resource path="res://Ressources/Sprites/Boss Mage/spawn/spawn7.png" type="Texture" id=43]
[ext_resource path="res://Ressources/Sprites/Boss Mage/death/death11.png" type="Texture" id=44]
[ext_resource path="res://Ressources/Sprites/Boss Mage/death/death9.png" type="Texture" id=45]
[ext_resource path="res://Ressources/Sprites/Boss Mage/death/death10.png" type="Texture" id=46]
[ext_resource path="res://Ressources/Sprites/Boss Mage/death/death6.png" type="Texture" id=47]
[ext_resource path="res://Ressources/Sprites/Boss Mage/death/death7.png" type="Texture" id=48]
[ext_resource path="res://Ressources/Sprites/Boss Mage/death/death3.png" type="Texture" id=49]
[ext_resource path="res://Ressources/Sprites/Boss Mage/death/death0.png" type="Texture" id=50]
[ext_resource path="res://Ressources/Sprites/Boss Mage/death/death1.png" type="Texture" id=51]
[ext_resource path="res://Ressources/Sprites/Boss Mage/death/death5.png" type="Texture" id=52]
[ext_resource path="res://Ressources/Sprites/Boss Mage/death/death4.png" type="Texture" id=53]
[ext_resource path="res://Ressources/Sprites/Boss Mage/death/death2.png" type="Texture" id=54]
[ext_resource path="res://Ressources/Sprites/Boss Mage/death/death8.png" type="Texture" id=55]
[ext_resource path="res://Scenes/Perso/BossMageRes.gd" type="Script" id=56]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 19 ), ExtResource( 25 ), ExtResource( 18 ), ExtResource( 24 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 23 ), ExtResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 51 ), ExtResource( 54 ), ExtResource( 49 ), ExtResource( 53 ), ExtResource( 52 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 55 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 44 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 21 ), ExtResource( 12 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 35 ), ExtResource( 28 ), ExtResource( 38 ), ExtResource( 37 ), ExtResource( 29 ), ExtResource( 42 ), ExtResource( 40 ), ExtResource( 43 ), ExtResource( 33 ), ExtResource( 30 ), ExtResource( 41 ), ExtResource( 27 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 36 ), ExtResource( 39 ), ExtResource( 34 ) ],
"loop": true,
"name": "spawn",
"speed": 5.0
} ]

[node name="BossMageRes" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 56 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "attack"
frame = 8
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -2, -2 )
polygon = PoolVector2Array( 0, -12, 8, -5, 10, 2, 2, 10, 10, 18, 18, 34, 18, 42, 10, 34, 2, 18, 2, 50, 10, 74, 10, 82, -30, 74, -14, 50, -14, 18, -22, 34, -22, 10, -14, 10, -6, -6, -14, -14 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 80, 32 )
scale = Vector2( 3, 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.2
one_shot = true

[node name="TimerSpawn" type="Timer" parent="."]
wait_time = 3.5
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerSpawn" to="." method="_on_TimerSpawn_timeout"]
